--- a/liver/templates/leaderboard.html
+++ b/liver/templates/leaderboard.html
@@ -6,10 +6,17 @@
 		<div class="score">Счет</div>
 	</div>
 	{% for user in users %}
-	<div class="row {% if user['winner'] %}top{% elif user['this'] %}user{% endif %}">
+	<div class="row {{user['class']}}{% if user['winner'] %}top{% elif user['this'] %}user{% endif %}">
 		<div class="position">{{ user.position }}</div>
 		<div class="name">{{ user.name }}</div>
 		<div class="score">{{ user.score }}</div>
 	</div>
 	{% endfor %}
+	{% if user_personal %}
+	<div class="row user">
+			<div class="position">{{ user_personal.position }}</div>
+			<div class="name">{{ user_personal.name }}</div>
+			<div class="score">{{ user_personal.score }}</div>
+	</div>
+	{% endif %}
 </div>
