--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -4,6 +4,7 @@ body {
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top;
+	background-color: #661db0; 
 	width: 100vw;
 	height: 100vh;
 }
