--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -119,7 +119,7 @@
 				});
 
 				// document.body.className = "hands_simple"
-				gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text">С вами уже играет </p> <p class="simple-text" id="user_count>${people_count}</p> <p class="simple-text"> человек</p>`;
+				gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text" style="display:inline">С вами уже играет </p> <p class="simple-text" id="user_count" style="display:inline">${people_count}</p> <p class="simple-text" style="display:inline"> человек</p>`;
 				chatSocket.send(JSON.stringify({message: "new_user", name: name}));
 			};
 		
