Watcher fixes & user waiting screen fixes

--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -92,9 +92,9 @@
 					document.getElementById('resultsButton').addEventListener('click', loadResults);
 				} else if (data.message === 'player_count') {
 					people_count = data.count;
-					var counter = document.getElementById("user_count");
+					var counter = document.getElementById("user-text");
 					if (counter) {
-						counter.innerHTML = people_count;
+						counter.innerHTML = `С вами уже играет ${people_count} человек`;
 					}
 					//gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text">С вами уже играет ${people_count} человек</p>`;
 				}
@@ -119,7 +119,7 @@
 				});
 
 				// document.body.className = "hands_simple"
-				gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text" style="display:inline">С вами уже играет </p> <p class="simple-text" id="user_count" style="display:inline">${people_count}</p> <p class="simple-text" style="display:inline"> человек</p>`;
+				gamezone.innerHTML = `<h2 class="header">Подождите, пожалуйста, игра скоро начнется...</h2><p class="simple-text" id="user-text">С вами уже играет ${people_count} человек</p>`;
 				chatSocket.send(JSON.stringify({message: "new_user", name: name}));
 			};
 		
