--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -339,11 +339,13 @@ body.hands_simple {
 
 	.row {
 		width: 30vw;
-		height: 4vw;
+		height: 3vw;
 	}
 
 	.row div {
 		font-size: 2vw;
+		line-height: 3vw;
+		height: 3vw;
 	}
 
 	.position {
@@ -356,5 +358,9 @@ body.hands_simple {
 
 	.name {
 		width: 21vw;
+	}
+
+	.result-bar-inner-1, .result-bar-inner-2 {
+		border-radius: 3vw 0 0 3vw;
 	}
 }
