--- a/static/style.css
+++ b/static/style.css
@@ -178,6 +178,7 @@ body.hands_simple {
 	margin: 0;
 	width: 69%;
 	background-color: #1FE6CA;
+	border: 2px solid #1FE6CA;
 }
 
 .result-bar-inner-2 {
@@ -339,11 +340,13 @@ body.hands_simple {
 
 	.row {
 		width: 30vw;
-		height: 4vw;
+		height: 3vw;
 	}
 
 	.row div {
 		font-size: 2vw;
+		line-height: 3vw;
+		height: 3vw;
 	}
 
 	.position {
@@ -356,5 +359,9 @@ body.hands_simple {
 
 	.name {
 		width: 21vw;
+	}
+
+	.result-bar-inner-1, .result-bar-inner-2 {
+		border-radius: 3vw 0 0 3vw;
 	}
 }
