--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -162,7 +162,17 @@ body.hands_simple {
 	color: #ffffff;
 }
 
-.result-bar-outer {
+.result-bar-outer-1 {
+	padding: 0;
+	background-color: #9045E1;
+	box-shadow: 0 10px 0 0 #6630A0;
+	overflow: hidden;
+	margin-bottom: 40px;
+	position: relative;
+	border: 2px solid #1FE6CA;
+}
+
+.result-bar-outer-2 {
 	padding: 0;
 	background-color: #9045E1;
 	box-shadow: 0 10px 0 0 #6630A0;
@@ -178,7 +188,6 @@ body.hands_simple {
 	margin: 0;
 	width: 69%;
 	background-color: #1FE6CA;
-	border: 2px solid #1FE6CA;
 }
 
 .result-bar-inner-2 {
