bordered buttons fix

--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -169,7 +169,7 @@ body.hands_simple {
 	overflow: hidden;
 	margin-bottom: 40px;
 	position: relative;
-	border: 2px solid #1FE6CA;
+	border: 2px #1FE6CA;
 }
 
 .result-bar-outer-2 {
