--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 body.hands {
-	background-image: url("./bg-hands.svg");
+	background-image: url("./bg-simple.svg");
 }
 
 body.hands_simple {
@@ -178,7 +178,6 @@ body.hands_simple {
 	margin: 0;
 	width: 69%;
 	background-color: #1FE6CA;
-	border: 2px solid #1FE6CA;
 }
 
 .result-bar-inner-2 {
