--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -319,7 +319,7 @@ body.hands_simple {
 		font-size: 4vw;
 		margin: 0;
 		padding: 2vw 8vw;
-		margin-bottom: 3vw;
+		margin-bottom: 10px;
 	}
 
 	.simple-text {
