--- a/static/style.css
+++ b/static/style.css
@@ -32,6 +32,7 @@ body.hands_simple {
 }
 
 .btn {
+	display:block;
 	width: 80vw;
 	height: 16vw;
 	border-radius: 8vw;
@@ -49,12 +50,10 @@ body.hands_simple {
 	color: #ffffff;
 	font-size: 6vw;
 	font-weight: 700;
-	box-shadow: 0 10px 0 0 #952196;
 }
 
 .btn1 {
 	background-color: #ffffff;
-	box-shadow: 0 10px 0 0 #B28BD5;
 	color: #7137B0;
 	text-align: left;
 	padding-left: 8vw;
@@ -62,7 +61,6 @@ body.hands_simple {
 
 .btn1:active, .btn1.chosen {
 	background-color: #9045E1;
-	box-shadow: 0 10px 0 0 #6630A0;
 	color: #ffffff;
 }
 
@@ -74,19 +72,16 @@ body.hands_simple {
 	background-size: auto 35%;
 	text-align: left;
 	padding-left: 8vw;
-	box-shadow: 0 10px 0 0 #6630A0;
 	color: #ffffff;
 }
 
 .btn2:active {
 	background-color: #6630A0;
-	box-shadow: 0 10px 0 0 #9045E1;
 	color: #ffffff;
 }
 
 .btn3 {
 	background-color: #1FE6CA;
-	box-shadow: 0 10px 0 0 #009C86;
 	color: #6630A0;
 	text-align: center;
 }
@@ -97,7 +92,6 @@ body.hands_simple {
 
 .btn4 {
 	background-color: #D62ED9;
-	box-shadow: 0 10px 0 0 #9B009D;
 	color: #ffffff;
 	text-align: center;
 }
@@ -165,7 +159,6 @@ body.hands_simple {
 .result-bar-outer {
 	padding: 0;
 	background-color: #9045E1;
-	box-shadow: 0 10px 0 0 #6630A0;
 	overflow: hidden;
 	margin-bottom: 40px;
 	position: relative;
@@ -177,7 +170,7 @@ body.hands_simple {
 	position: absolute;
 	margin: 0;
 	width: 69%;
-	background-color: #1FE6CA;
+	background-color: #78DA75;
 }
 
 .result-bar-inner-2 {
@@ -186,7 +179,7 @@ body.hands_simple {
 	position: absolute;
 	margin: 0;
 	width: 69%;
-	background-color: #D62ED8;
+	background-color: #FE6479;
 }
 
 .result-bar-outer span {
@@ -204,9 +197,10 @@ body.hands_simple {
 }
 
 .header {
+	display:block;
 	font-family: 'Montserrat', sans-serif;
-	font-weight: 850;
-	font-size: 8vw;
+	font-weight: 800;
+	font-size: 6vw;
 	color: white;
 	margin: 8vw;
 	margin-bottom: 10px;
@@ -301,11 +295,13 @@ body.hands_simple {
 	}
 
 	.input-holder input {
-		width: 17vw;
+		width: 21vw;
 		height: 4vw;
 		bottom: 0;
 		left: 1vw;
 		font-size: 2vw;
+		border-radius: 2vw;
+		padding-left: 2vw;
 	}
 
 	.input-holder button {
@@ -319,7 +315,7 @@ body.hands_simple {
 		font-size: 4vw;
 		margin: 0;
 		padding: 2vw 8vw;
-		margin-bottom: 1vw;
+		margin-bottom: 10px;
 	}
 
 	.simple-text {
@@ -338,7 +334,7 @@ body.hands_simple {
 	}
 
 	.row {
-		width: 30vw;
+		width: 50vw;
 		height: 3vw;
 	}
 
@@ -357,10 +353,22 @@ body.hands_simple {
 	}
 
 	.name {
-		width: 21vw;
+		width: 41vw;
 	}
 
 	.result-bar-inner-1, .result-bar-inner-2 {
 		border-radius: 3vw 0 0 3vw;
+	}
+
+	.btn1 {
+		padding-left: 3vw;
+	}
+
+	.answer {
+		left: 3vw;
+	}
+
+	.percent {
+		right: 1.5vw;
 	}
 }
