--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -20,7 +20,7 @@
 			var people_count=1;
 			var roomName = {{ quiz_url_json }};
 			var chatSocket = new WebSocket(
-				'ws://' + window.location.host +
+				'ws://' + window.location.host + ':8000' +
 				'/ws/quiz/' + roomName + '/');
 
 			    chatSocket.onclose = function(e) {
