--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -114,6 +114,7 @@
 					if (true) {
 						console.log("OK");
 						people_count = data['count']
+						name = data['user_id']
 					}
 					}
 				});
