--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -11,10 +11,12 @@
 	<div class="center" id="main">
 		<button class="btn btn-main center" id="mainButton">HANDSAPP</button>
 	</div>
+	<div class="center">
+	<footer class="simple-text">
+		<a href="mailto:info@handsapp.fun" target="_top">info@handsapp.fun</a>
+	</footer>
 </div>
-<footer class="simple-text">
-	<a href="mailto:info@handsapp.fun" target="_top">info@handsapp.fun</a>
-</footer>
+</div>
 	<script>
 			var status_start = "{{quiz_object.is_started}}";
 			let main = document.getElementById('main');
