--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -11,11 +11,11 @@
 	<div class="center" id="main">
 		<button class="btn btn-main center" id="mainButton">HANDSAPP</button>
 	</div>
-	<div class="center">
+</div>
+<div class="footer">
 	<footer class="simple-text">
 		<a href="mailto:info@handsapp.fun" target="_top">info@handsapp.fun</a>
 	</footer>
-</div>
 </div>
 	<script>
 			var status_start = "{{quiz_object.is_started}}";
