--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -12,6 +12,11 @@
                 <button class="btn btn-main center" id="mainButton">HANDSAPP</button>
             </div>
         </div>
+        <div class="footer">
+            <footer class="simple-text">
+                <a href="mailto:info@handsapp.fun" target="_top">info@handsapp.fun</a>
+            </footer>
+        </div>
     </body>
     <script>
         var status_start = "{{quiz_object.is_started}}";
