--- a/liver/templates/game_screen.html
+++ b/liver/templates/game_screen.html
@@ -12,6 +12,9 @@
 		<button class="btn btn-main center" id="mainButton">HANDSAPP</button>
 	</div>
 </div>
+<footer class="simple-text">
+	<a href="mailto:info@handsapp.fun" target="_top">info@handsapp.fun</a>
+</footer>
 	<script>
 			var status_start = "{{quiz_object.is_started}}";
 			let main = document.getElementById('main');
