--- a/static_temp/style.css
+++ b/static_temp/style.css
@@ -26,9 +26,13 @@ body.hands_simple {
 
 .footer {
 	position: absolute;
-	top: 90%;
+	top: 95%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 600;
+	font-size: 2vw;
+	color: white;
 }
 
 .bottom {
