--- a/liver/templates/watcher.html
+++ b/liver/templates/watcher.html
@@ -12,10 +12,8 @@
                 <button class="btn btn-main center" id="mainButton">HANDSAPP</button>
             </div>
         </div>
-        <div class="footer">
-            <footer class="simple-text">
-                <a href="mailto:info@handsapp.fun" target="_top">info@handsapp.fun</a>
-            </footer>
+        <div>
+            <a href="mailto:info@handsapp.fun" target="_top" class="footer">info@handsapp.fun</a>
         </div>
     </body>
     <script>
